--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/wn_wuye
+spring.datasource.username=root
+spring.datasource.password=123456
+mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.type-aliases-package=com.woniuxy.wuye.entity
 
+spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/, classpath:/static/, classpath:/public/,file:${uploadpath}
+uploadpath=D://HouseImages
