--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/wn_wuye
 spring.datasource.username=root
@@ -8,3 +9,4 @@ mybatis.type-aliases-package=com.woniuxy.wuye.entity
 
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/, classpath:/static/, classpath:/public/,file:${uploadpath}
 uploadpath=D://HouseImages
+logging.level.com.woniuxy.wuye.mapper=debug
